* Fix bug related with overflow.

--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -5,8 +5,6 @@
  */
 body {
   font-family: 'Roboto';
-  overflow: hidden;
-  overflow-x: hidden;
   background: #{{ site.color.secondary }};
 }
 
